--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
+    "react-countdown-clock": "^2.5.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
