--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.6.3",
     "react-countdown-clock": "^2.5.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
   },
   "scripts": {
     "start": "react-scripts start",
